force-app/main/default/objects/Services_Interested__c/Services_Interested__c.object-meta.xml
<CustomObject>
    <description>#SFSE-13341 : Object to hold the services which are interested by the customer. Junction between Innovation Center Engagement and Innovation Services.</description>
    <label>Services Interested</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Interested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>