force-app/main/default/objects/Services_Interested__c/fields/Comments_Details__c.field-meta.xml
<CustomField>
    <fullName>Comments_Details__c</fullName>
    <description>This field holds the specific service offered to customer which is not mastered in Innovation Services</description>
    <inlineHelpText>Please enter the service offered to customer.</inlineHelpText>
    <label>Comments/ Details</label>
    <type>TextArea</type>
</CustomField>