force-app/main/default/objects/Services_Interested__c/fields/Innovation_Center_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Center_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SFSE-13341: Look up to Innovation Center Engagement Object.</description>
    <inlineHelpText>Innovation center engagement visited by customer.</inlineHelpText>
    <label>Innovation Center Engagement</label>
    <referenceTo>Innovation_Center_Engagement__c</referenceTo>
    <relationshipLabel>Services Interested</relationshipLabel>
    <relationshipName>Services_Interested</relationshipName>
    <type>Lookup</type>
</CustomField>