force-app/main/default/objects/Services_Interested__c/fields/Innovation_Services__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#SFSE-13341: Look up to Innovation Services Object.</description>
    <inlineHelpText>Indicates the type of service the customer was intrested in.</inlineHelpText>
    <label>Innovation Services</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Innovation_Services__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Innovation_Services__c</referenceTo>
    <relationshipLabel>Services Interested</relationshipLabel>
    <relationshipName>Services_Interested</relationshipName>
    <type>Lookup</type>
</CustomField>