force-app/main/default/objects/Services_Interested__c/fields/Program_Owner__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner__c</fullName>
    <description>This will capture the name of the user responsible from Innovation Team to work with customer</description>
    <inlineHelpText>Please enter the name of responsible user for this service offered to customer</inlineHelpText>
    <label>Program Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>