force-app/main/default/objects/Services_Interested__c/validationRules/Comments_are_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_are_Mandatory</fullName>
    <active>true</active>
    <description>If Innovation Services Selected is Others then Comments has to be mandatory</description>
    <errorConditionFormula>AND(Innovation_Services__r.Name  =  &apos;Others&apos;,  
     ISBLANK(Comments_Details__c ))</errorConditionFormula>
    <errorDisplayField>Comments_Details__c</errorDisplayField>
    <errorMessage>Please enter the Specific Service offered to customer</errorMessage>
</ValidationRule>