force-app/main/default/objects/Services_Interested__c/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>NAME</columns>
    <columns>Innovation_Center_Engagement__c</columns>
    <columns>Innovation_Services__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>