force-app/main/default/objects/Services_Interested__c/listViews/My_Services_Interested.listView-meta.xml
<ListView>
    <fullName>My_Services_Interested</fullName>
    <columns>NAME</columns>
    <columns>Innovation_Center_Engagement__c</columns>
    <columns>Innovation_Services__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Services Interested</label>
</ListView>